# kontroller

./: .clang-format  .gitignore  .gitmodules  AlbumInformationPage.qml  ArtistInformationPage.qml  CMakeLists.txt  Changelog.md  GenericList.qml  Hideable.qml  KodiMain.qml  ListContextMenu.qml  MovieInformationPage.qml  MusicList.qml  MusicPage.qml  PlayableItemPage.qml  PlaylistPage.qml  README.md  RemoteControl.qml  SettingsPage.qml  StatusBar.qml  Styling.qml  VideoPage.qml  VideosList.qml  albuminformationservice.cpp  albuminformationservice.h  albumsrequest.cpp  albumsrequest.h  artistinformationservice.cpp  artistinformationservice.h  audiostream.cpp  client.cpp  client.h  deviceinformation.cpp  deviceinformation.h  downloadlocation.h  downloadservice.cpp  downloadservice.h  episodeinformationservice.cpp  episodeinformationservice.h  icons.qrc  (+79 more)
android/: AndroidManifest.xml
archives/: harbour-kontroller-0.5-1.armv7hl.rpm  harbour-kontroller-0.6-1.armv7hl.rpm  harbour-kontroller-debuginfo-0.5-1.armv7hl.rpm  harbour-kontroller-debuginfo-0.6-1.armv7hl.rpm  harbour-kontroller-debugsource-0.5-1.armv7hl.rpm  harbour-kontroller-debugsource-0.6-1.armv7hl.rpm
kontroller/: albuminformationservice.cpp  albuminformationservice.h  albumsrequest.cpp  albumsrequest.h  applicationsettings.cpp  applicationsettings.h  artistinformationservice.cpp  artistinformationservice.h  audiostream.cpp  audiostream.h  client.cpp  client.h  deviceinformation.cpp  deviceinformation.h  downloadlocation.cpp  downloadservice.cpp  downloadservice.h  episodeinformationservice.cpp  episodeinformationservice.h  file.cpp  file.h  harbour-kontroller.desktop  imagecontrol.cpp  imagecontrol.h  kodiservicediscovery.h  kodivolumeplugin.cpp  kodivolumeplugin.h  kontroller.desktop  kontroller.prf  kontroller.pro  main.cpp  minidspvolumeplugin.cpp  minidspvolumeplugin.h  movieinformationservice.cpp  movieinformationservice.h  musiccontrol.cpp  musiccontrol.h  musicservice.cpp  musicservice.h  player.cpp  (+46 more)
kontroller/icons/: create.sh
kontroller/icons/sailfish/: create.sh
kontroller/plugins/volume/: kodivolumeplugin.h  minidspvolumeplugin.cpp  volumeplugin.h
kontroller/plugins/wakeup/: wakeupplugin.cpp  wakeupplugin.h  wolwakeupplugin.cpp  wolwakeupplugin.h
kontroller/qml/: About.qml  AlbumInformationPage.qml  ArtistInformationPage.qml  CurrentlyPlaying.qml  EpisodeInformationPage.qml  ImagePage.qml  KontrollerMain.qml  ManageZones.qml  MovieInformationPage.qml  MusicPage.qml  PageFactory.qml  PlayableItemPage.qml  PlayerControl.qml  PlaylistPage.qml  SeasonInformationPage.qml  ServerPage.qml  ServerSettingsPage.qml  SettingsPage.qml  TvShowInformationPage.qml  VideoPage.qml  kontroller.qml  utils.js
kontroller/qml/components/: PlayerControl.qml  PropertiesWithImage.qml
kontroller/requests/: albumsrequest.cpp  albumsrequest.h  moviesrequest.cpp  moviesrequest.hpp  songsrequest.cpp  songsrequest.h  tvshowepisodesrequest.cpp  tvshowepisodesrequest.h  tvshowsrequest.cpp  tvshowsrequest.hpp
kontroller/services/: imageservice.cpp  imageservice.h
kontroller/translations/: harbour-kontroller-de.ts  harbour-kontroller-en.ts  harbour-kontroller-fr.ts  harbour-kontroller-nb_NO.ts  harbour-kontroller-nl.ts  harbour-kontroller-nl_BE.ts  harbour-kontroller-ru.ts  harbour-kontroller-si.ts  harbour-kontroller-sv.ts  harbour-kontroller-ta.ts  harbour-kontroller.ts  kontroller-fr.qm  kontroller-sv.ts
lib/arp/: CMakeLists.txt  macaddressfinder.cpp  macaddressfinder.h
lib/mdns/: dnspacket.cpp  dnspacket.h  sbzeroconfservicediscovery.cpp  sbzeroconfservicediscovery.h  sbzeroconfservicerecord.cpp  sbzeroconfservicerecord.h
lib/minidsplib/: CMakeLists.txt  constants.h  query.cpp  query.h  reply.cpp  reply.h
qml/: About.qml  AlbumInformationPage.qml  ArtistInformationPage.qml  CurrentlyPlaying.qml  EpisodeInformationPage.qml  GenericList.qml  KodiMain.qml  KontrollerMain.qml  ManageZones.qml  MovieInformationPage.qml  MusicInformation.qml  MusicPage.qml  PlayableItemPage.qml  PlayerProperties.qml  PlaylistPage.qml  RemoteControl.qml  SeasonInformationPage.qml  ServerPage.qml  ServerSettingsPage.qml  SettingsPage.qml  StatusBar.qml  TvShowInformationPage.qml  VideoPage.qml  kontroller.qml  main.qml  qml.qrc  qmldir  utils.js
qml/components/: AvrVolume.qml  PropertiesWithImage.qml  ResumeButton.qml  TwoLinesDisplay.qml
qml/cover/: CoverPage.qml
qml/generic/: AlbumInformationPage.qml  ArtistInformationPage.qml  CurrentlyPlaying.qml  GenericList.qml  KontrollerMain.qml  MusicPage.qml  PlayableItemPage.qml  PlayerProperties.qml  SettingsPage.qml  StatusBar.qml  Styling.qml  VideoPage.qml  main.qml
qml/sailfish/: AlbumInformationPage.qml  ArtistInformationPage.qml  CurrentlyPlaying.qml  EpisodeInformationPage.qml  GenericList.qml  Hideable.qml  KontrollerMain.qml  ListContextMenu.qml  ManageZones.qml  MovieInformationPage.qml  MusicPage.qml  PlayableItemPage.qml  PlayerProperties.qml  PlaylistPage.qml  RemoteControl.qml  SeasonInformationPage.qml  ServerSettingsPage.qml  SettingsPage.qml  StatusBar.qml  TvShowInformationPage.qml  VideoPage.qml  kontroller.qml  qml.qrc
qml_desktop/: main.qml
rpm/: harbour-kontroller.yaml  kontroller.spec  kontroller.spec.17161  kontroller.yaml  telexbmc.yaml
src/: applicationsettings.cpp  artistinformationservice.cpp  audiostream.h  client.cpp  client.h  deviceinformation.cpp  deviceinformation.h  downloadlocation.cpp  downloadlocation.h  downloadservice.cpp  downloadservice.h  episodeinformationservice.cpp  file.cpp  file.h  kodiservicediscovery.cpp  libraryservice.cpp  libraryservice.h  main.cpp  player.cpp  player.h  playerservice.cpp  playerservice.h  playinginformation.cpp  playinginformation.h  playlistservice.h  sbiconimageprovider.cpp  server.cpp  subtitle.h  utils.cpp  videocontrol.cpp
src/requests/: moviesrequest.hpp  playlistrequest.cpp  playlistrequest.hpp  tvshowepisodesrequest.cpp  tvshowseasonsrequest.cpp  tvshowseasonsrequest.h  tvshowsrequest.hpp
translations/: kontroller-en.ts  kontroller-fr.qm  kontroller-fr.ts  kontroller-ru.ts  kontroller.ts
(+86 files in other folders)
